@@ -16,8 +16,8 @@
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="9"/>
-        <TopLine Value="243"/>
-        <CursorPos X="26" Y="267"/>
+        <TopLine Value="145"/>
+        <CursorPos X="24" Y="164"/>
         <UsageCount Value="107"/>
         <Loaded Value="True"/>
       </Unit1>
@@ -63,8 +63,8 @@
         <Filename Value="Test6.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="11"/>
-        <TopLine Value="132"/>
-        <CursorPos X="52" Y="154"/>
+        <TopLine Value="118"/>
+        <CursorPos Y="96"/>
         <UsageCount Value="107"/>
         <Loaded Value="True"/>
       </Unit7>
@@ -212,7 +212,7 @@
       </Unit22>
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="234"/>
         <CursorPos Y="254"/>
         <UsageCount Value="28"/>
@@ -287,9 +287,9 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="327"/>
-        <CursorPos X="3" Y="329"/>
+        <EditorIndex Value="15"/>
+        <TopLine Value="1014"/>
+        <CursorPos Y="1051"/>
         <UsageCount Value="15"/>
         <Loaded Value="True"/>
       </Unit33>
@@ -308,15 +308,15 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="13"/>
-        <TopLine Value="801"/>
-        <CursorPos X="3" Y="792"/>
+        <EditorIndex Value="14"/>
+        <TopLine Value="1170"/>
+        <CursorPos X="3" Y="1158"/>
         <UsageCount Value="16"/>
         <Loaded Value="True"/>
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <TopLine Value="96"/>
         <CursorPos X="42" Y="106"/>
         <UsageCount Value="13"/>
@@ -431,9 +431,11 @@
       </Unit52>
       <Unit53>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos X="69" Y="12"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="12"/>
+        <CursorPos X="80" Y="14"/>
         <UsageCount Value="24"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
       <Unit54>
@@ -507,9 +509,8 @@
       </Unit62>
       <Unit63>
         <Filename Value="../client/FBBlob.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="16"/>
-        <TopLine Value="444"/>
+        <EditorIndex Value="17"/>
+        <TopLine Value="443"/>
         <CursorPos Y="452"/>
         <UsageCount Value="15"/>
         <Loaded Value="True"/>
@@ -631,7 +632,7 @@
       </Unit80>
       <Unit81>
         <Filename Value="../client/2.5/FB25Blob.pas"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="134"/>
         <CursorPos X="25" Y="133"/>
         <UsageCount Value="12"/>
@@ -639,7 +640,7 @@
       </Unit81>
       <Unit82>
         <Filename Value="../client/3.0/FB30Blob.pas"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="19"/>
         <TopLine Value="111"/>
         <CursorPos X="15" Y="139"/>
         <UsageCount Value="12"/>
@@ -667,7 +668,7 @@
       </Unit85>
       <Unit86>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/objpash.inc"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="21"/>
         <TopLine Value="393"/>
         <CursorPos X="37" Y="430"/>
         <UsageCount Value="11"/>
@@ -683,7 +684,7 @@
       </Unit87>
       <Unit88>
         <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="204"/>
         <CursorPos Y="232"/>
         <UsageCount Value="10"/>
@@ -692,124 +693,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="67" Column="13" TopLine="53"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="448" Column="48" TopLine="428"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="437" Column="3" TopLine="435"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="139" Column="24" TopLine="112"/>
       </Position2>
       <Position3>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="65" Column="21" TopLine="47"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="329" Column="3" TopLine="327"/>
       </Position3>
       <Position4>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="425" Column="3" TopLine="422"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="210" Column="3" TopLine="190"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="72" Column="21" TopLine="45"/>
+        <Filename Value="../client/2.5/FB25Statement.pas"/>
+        <Caret Line="253" Column="14" TopLine="233"/>
       </Position5>
       <Position6>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="449" Column="3" TopLine="446"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="792" Column="3" TopLine="792"/>
       </Position6>
       <Position7>
-        <Filename Value="../client/FBBlob.pas"/>
-        <Caret Line="72" Column="21" TopLine="46"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="801" Column="76" TopLine="793"/>
       </Position7>
       <Position8>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="399" Column="54" TopLine="389"/>
+        <Caret Line="247" Column="19" TopLine="228"/>
       </Position8>
       <Position9>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="117" Column="15" TopLine="97"/>
+        <Caret Line="1085" Column="3" TopLine="1104"/>
       </Position9>
       <Position10>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="332" Column="3" TopLine="330"/>
+        <Caret Line="203" Column="13" TopLine="181"/>
       </Position10>
       <Position11>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="129" Column="22" TopLine="107"/>
+        <Caret Line="150" Column="17" TopLine="130"/>
       </Position11>
       <Position12>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="464" Column="3" TopLine="462"/>
+        <Caret Line="203" Column="17" TopLine="171"/>
       </Position12>
       <Position13>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="129" Column="28" TopLine="111"/>
+        <Caret Line="565" Column="34" TopLine="533"/>
       </Position13>
       <Position14>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="399" Column="50" TopLine="367"/>
+        <Caret Line="948" Column="25" TopLine="916"/>
       </Position14>
       <Position15>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="462" Column="34" TopLine="448"/>
+        <Caret Line="1001" Column="34" TopLine="969"/>
       </Position15>
       <Position16>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="129" Column="28" TopLine="111"/>
+        <Caret Line="1009" Column="42" TopLine="977"/>
       </Position16>
       <Position17>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="399" Column="50" TopLine="367"/>
+        <Caret Line="1017" Column="40" TopLine="985"/>
       </Position17>
       <Position18>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="462" Column="34" TopLine="430"/>
+        <Caret Line="1076" Column="28" TopLine="1044"/>
       </Position18>
       <Position19>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="209" Column="15" TopLine="189"/>
+        <Caret Line="1077" Column="28" TopLine="1045"/>
       </Position19>
       <Position20>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="538" Column="80" TopLine="524"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1093" Column="34" TopLine="1061"/>
       </Position20>
       <Position21>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="214" Column="15" TopLine="194"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1095" Column="51" TopLine="1063"/>
       </Position21>
       <Position22>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="679" Column="9" TopLine="659"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1145" Column="36" TopLine="1113"/>
       </Position22>
       <Position23>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="191" Column="15" TopLine="170"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1203" TopLine="1168"/>
       </Position23>
       <Position24>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="770" Column="20" TopLine="767"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="247" Column="14" TopLine="229"/>
       </Position24>
       <Position25>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="210" Column="15" TopLine="190"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1145" Column="46" TopLine="1114"/>
       </Position25>
       <Position26>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="508" Column="21" TopLine="503"/>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="248" Column="14" TopLine="228"/>
       </Position26>
       <Position27>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="775" Column="82" TopLine="767"/>
+        <Caret Line="254" Column="24" TopLine="233"/>
       </Position27>
       <Position28>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="161" Column="15" TopLine="142"/>
+        <Caret Line="1104" TopLine="1071"/>
       </Position28>
       <Position29>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="448" Column="48" TopLine="428"/>
+        <Caret Line="253" Column="14" TopLine="235"/>
       </Position29>
       <Position30>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="139" Column="24" TopLine="112"/>
+        <Filename Value="Test6.pas"/>
+        <Caret Line="156" Column="19" TopLine="129"/>
       </Position30>
     </JumpHistory>
   </ProjectSession>
